# RustToyLang

./: .gitignore  Cargo.toml  README.md  TODO  TODO.md
cli/: Cargo.toml
cli/src/: main.rs
error/: Cargo.toml
error/src/: handler.rs  lib.rs
lexer/: Cargo.toml
lexer/src/: lib.rs  token.rs
lexer/src/source/: mod.rs  string.rs
libftl_cli/: Cargo.toml
libftl_cli/src/: helpers.rs  main.rs
libftl_cli/src/phase/: mod.rs  ppp.rs
libftl_error/: Cargo.toml
libftl_error/src/: lib.rs
libftl_lexer/: Cargo.toml
libftl_lexer/src/: helpers.rs  lib.rs  token.rs
libftl_parser/: Cargo.toml  TODO
libftl_parser/src/: ast.rs  combinators.rs  errors.rs  lib.rs  utility.rs  visitor.rs  visitor_mut.rs
libftl_parser/src/combinators/: concrete.rs  mod.rs  utility.rs
libftl_pass/: Cargo.toml  TODO
libftl_pass/src/: dm.rs  epr.rs  ftd.rs  gn.rs  lib.rs  pp.rs  rm.rs
libftl_session/: Cargo.toml
libftl_session/src/: lib.rs
libftl_source/: Cargo.toml
libftl_source/src/: file.rs  lib.rs  string.rs
libftl_utility/: Cargo.toml
libftl_utility/src/: lib.rs  macros.rs  utf8.rs
parser/: Cargo.toml
parser/src/: ast.rs  combinators.rs  lib.rs  nodes.rs  parsers.rs
pass/: Cargo.toml
pass/src/: lib.rs
source/: Cargo.toml
source/src/: lib.rs
utility/: Cargo.toml
utility/src/: macros.rs
