[package]
name = "ftl_cli"
version = "0.1.0"
authors = ["Rafał Galczak <r.galczak@gmail.com>"]
edition = "2018"

[[bin]]
name = "ftlc"
path = "src/main.rs"


[dependencies]
ftl_lexer = { path = "../libftl_lexer" }
ftl_error = { path = "../libftl_error" }
libftl_source = { path = "../libftl_source" }