[package]
name = "toylang-parser"
version = "0.1.0"
authors = ["Rafał Galczak <r.galczak@gmail.com>"]
edition = "2018"

[lib]
name = "parser"
path = "src/lib.rs"


[dependencies]
toylang-source = {path = "../source" }
toylang-utility = { path = "../utility" }
toylang-lexer = { path = "../lexer" }
toylang-error = { path = "../error" }